gateway csrf disabled

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,6 +1,16 @@
 server:
   port: 9000
   
+logging:
+  level:
+    root: INFO
+    org.springframework.web: INFO
+    org.springframework.web.HttpLogging: DEBUG
+    org.springframework.security: DEBUG
+    org.springframework.security.oauth2: DEBUG
+    org.springframework.cloud.gateway: DEBUG
+  
+  
 spring:
  main:
     web-application-type: reactive
@@ -13,7 +23,8 @@ spring:
       discovery:
         locator:
           enabled: true
- jackson:    default-property-inclusion: NON_NULL
+ jackson:
+    default-property-inclusion: NON_NULL
 
 eureka:
   client:
@@ -30,9 +41,13 @@ jwt:
   secret:
     secretkey
        
-# cloud:#   gateway:#    routes:#      - id: user-service
+# cloud:
+#   gateway:
+#    routes:
+#      - id: user-service
 #        uri: lb://USER-MICROSERVICE
-#        predicates:#          - Path=/user/**
+#        predicates:
+#          - Path=/user/**
 #      - id: product-service
 #        uri: lb://PRODUCT-MICROSERVICE
 #        predicates:
